--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
     <div id="main">
         <div id="page1">
             <nav>
-                <img src="img/Screenshot 2023-05-30 220719.png" alt="logo">
+                <h2 id="logo">Mag.</h2>
                 <div id="rightnav">
                     <button>book a demo</button>
                     <button><i class="ri-menu-3-line"></i></button>
                 </div>
             </nav>
+            <div id="bottom-page-1">
+                <h1>Experience Real <br> Estate Agility</h1>
+                <div id="bottom-page-inner">
+                    <h4>Create a Digital Twin Token (DTT®) of your existing
+                        <br> building and release the potential of Web3.</h4>
+                    <button>LEARN MORE</button>
+                </div>
+
+            </div>
             <video src="vid/1.mp4" autoplay muted loop></video>
         </div>
     </div>
