--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
             <h1 id="textP">The Digital Twin Token is a unique digital asset backed by property data. Magma combines your building’s components and systems essential information into a DTT®.</h1>
         </div>
 
-        
+        <div id="page3">
+
+            <canvas></canvas>
+        </div>
     </div>
 
 
